# python-scanner-s3

./: .env.example  .pre-commit-config.yaml  CONFIG_README.md  README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py
src/cli/: __init__.py  auth_cli.py  crypto_cli.py  scanner_cli.py  upload_cli.py
src/config/: __init__.py  env_loader.py  settings.py
src/gui/: __init__.py  login_dialog.py  main.py
src/models/: __init__.py  branch.py  document.py  operator.py  scanning_session.py
src/services/: __init__.py  auth_service.py  crypto_service.py  scanner_service.py  scanner_service_mock.py  scanner_service_real.py  upload_service.py
tests/contract/: test_auth_service.py  test_crypto_service.py  test_scanner_service.py  test_upload_service.py
tests/integration/: test_document_workflow.py  test_network_retry.py  test_scanner_errors.py  test_session_management.py
