[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanner-cifrado-s3"
version = "0.1.0"
description = "Document scanner with local encryption and S3 upload for branch offices"
authors = [{name = "Delfos Labs", email = "dev@delfoslabs.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.4.0",
    "cryptography>=41.0.0", 
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "Pillow>=10.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "structlog>=23.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0", 
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0"
]

[project.scripts]
scanner-app = "gui.main:main"
scanner-cli = "cli.scanner_cli:main"
crypto-cli = "cli.crypto_cli:main"
upload-cli = "cli.upload_cli:main"
auth-cli = "cli.auth_cli:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | scanner-env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
exclude = [
    "scanner-env",
    "build",
    "dist"
]

# Per-module options for third-party libraries
[[tool.mypy.overrides]]
module = [
    "PyQt6.*",
    "boto3.*",
    "botocore.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# [tool.bandit]
# exclude_dirs = ["tests", "scanner-env"]
# skips = ["B101"]  # Skip assert_used test